fixed img wrong position and svg not working on firefox

--- a/css/master.css
+++ b/css/master.css
@@ -226,11 +226,6 @@ main article h2{
   padding-top:10px;
 }
 
-img {
-  height:100%;
-  padding-top: 20px;
-}
-
 h2 {
   text-align: center;
 }
